BPER/DEVF/force-app/main/default/objects/CH_AttivazioneDisattivazioneOFS__c/CH_AttivazioneDisattivazioneOFS__c.object-meta.xml
<CustomObject>
    <label>CH - Attivazione / Disattivazione OFS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome CH - Attivazione / Disattivazione O</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Attivazione / Disattivazione OFS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>