BPER/DEVF/force-app/main/default/objects/CH_AttivazioneDisattivazioneOFS__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CH - Attivazione / Disattivazione OFS</relationshipLabel>
    <relationshipName>CH_Attivazione_Disattivazione_OFS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>