BPER/DEVF/force-app/main/default/objects/CH_AttivazioneDisattivazioneOFS__c/fields/CRM_AssegnatoA__c.field-meta.xml
<CustomField>
    <fullName>CRM_AssegnatoA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assegnato a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>