BPER/DEVF/force-app/main/default/objects/CH_AttivazioneDisattivazioneOFS__c/fields/CRM_DataAttivazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAttivazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data attivazione</label>
    <type>Date</type>
</CustomField>