BPER/DEVF/force-app/main/default/objects/CH_AttivazioneDisattivazioneOFS__c/fields/CRM_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attivazione</fullName>
            </value>
            <value>
                <fullName>Disattivazione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>