BPER/DEVF/force-app/main/default/objects/CH_AttivazioneDisattivazioneOFS__c/fields/CRM_NoteAutore__c.field-meta.xml
<CustomField>
    <fullName>CRM_NoteAutore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note Autore</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>